Readied for a beta release

--- a/src/main/resources/assets/hexaplex/lang/en_us.json
+++ b/src/main/resources/assets/hexaplex/lang/en_us.json
@@ -1,9 +1,23 @@
 {
-  "options.hexaplex.profile.title": "Colorblindness",
-  "options.hexaplex.profile.normal": "Normal",
-  "options.hexaplex.profile.deuteran": "Deuteran",
-  "options.hexaplex.profile.protan": "Protan",
-  "options.hexaplex.profile.tritan": "Tritan",
-  "options.hexaplex.strength.tooltip": "Determines the strength of the colorblindness filter.",
-  "options.hexaplex.strength.title": "Colorblindness Strength"
+  "config.hexaplex.title": "Hexaplex Settings",
+  "config.hexaplex.category": "",
+  "config.hexaplex.percent_sign": "%",
+  "config.hexaplex.profile": "Profile",
+  "config.hexaplex.strength": "Strength",
+  "config.hexaplex.skew": "Skew",
+  "config.hexaplex.profile.normal": "Normal",
+  "config.hexaplex.profile.protanomaly": "Protanomaly",
+  "config.hexaplex.profile.deuteranomaly": "Deuteranomaly",
+  "config.hexaplex.profile.tritanomaly": "Tritanomaly",
+  "config.hexaplex.profile.protanopia": "Protanopia",
+  "config.hexaplex.profile.deuteranopia": "Deuteranopia",
+  "config.hexaplex.profile.tritanopia": "Tritanopia",
+  "config.hexaplex.strength.normal": "N/A",
+  "config.hexaplex.strength.protan": "%1$d%%",
+  "config.hexaplex.strength.deuteran": "%1$d%%",
+  "config.hexaplex.strength.tritan": "%1$d%%",
+  "config.hexaplex.skew.normal": "N/A",
+  "config.hexaplex.skew.protan": "%1$d%% Green : %2$d%% Blue",
+  "config.hexaplex.skew.deuteran": "%1$d%% Red : %2$d%% Blue",
+  "config.hexaplex.skew.tritan": "%1$d%% Red : %2$d%% Green"
 }
